Final poster version

--- a/2023_Bioc/ref.bib
+++ b/2023_Bioc/ref.bib
@@ -5,7 +5,7 @@ doi = {10.1038/s41591-020-01168-7},
 issn = {1546-170X},
 journal = {Nature Medicine 2021 27:2},
 keywords = {Breast cancer,Preclinical research},
-month = {jan},
+month = jan,
 number = {2},
 pages = {310--320},
 pmid = {33462444},
