--- a/2023_Bioc/2023_Bioc_poster.tex
+++ b/2023_Bioc/2023_Bioc_poster.tex
@@ -1,5 +1,5 @@
-\documentclass[24pt,margin=20mm,innermargin=-6in,blockverticalspace=-0.25in]{tikzposter}
-\geometry{paperwidth=46in,paperheight=33in}
+\documentclass[25pt,margin=20mm,innermargin=-6in,blockverticalspace=1mm]{tikzposter}
+\geometry{paperwidth=47in,paperheight=33in}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -12,7 +12,7 @@
 \usepackage{adjustbox}
 \usepackage{enumitem}
 \usepackage{wrapfig}
-\usepackage[backend=bibtex,style=numeric,doi=false,url=false,eprint=false,sorting=none]{biblatex}
+\usepackage[backend=bibtex,style=numeric,doi=false,url=false,eprint=false,sorting=none,autocite=superscript]{biblatex}
 \usepackage{uofa-theme}
 \usetikzlibrary{positioning,shapes,arrows}
 
@@ -32,7 +32,6 @@
   \textsuperscript{2}Black Ochre Data Labs, Telethon Kids Institute\hspace{5mm}
   \textsuperscript{3}Bordeaux Institute of Oncology, University of Bordeaux
 }
-%\titlegraphic{\includegraphics[width=0.1\textwidth]{UoA-standard-vert-rgb.jpg}}
 
 
 % begin document
@@ -47,31 +46,29 @@
 \centering
 
 \block{GRAVI Outline}{
-	\begin{minipage}{0.93\linewidth}
+
+	\begin{minipage}{0.08\linewidth}
+		\includegraphics[width=0.8\linewidth]{extraChIPs_sticker}	
+	\end{minipage}
+	\begin{minipage}{0.82\linewidth}	
 	\LARGE
-	\textbf{GRAVI} is a \texttt{snakemake}\cite{Molder2021-mo} workflow for performing high-quality ChIP-Seq analysis.
-	GRAVI standardises multiple steps to enable a \textit{complete standalone analysis}, as well as enabling \textit{integration across multiple cell types}.
-	The minimal required data is a single ChIP target under 2 conditions expanding to \textit{any number of ChIP targets and conditions}.
+	\centering
+	\textbf{GRAVI} is a \texttt{snakemake}\autocite{Molder2021-mo} workflow for performing high-throughput, high-quality Differential Signal Analysis for ChIP-Seq data, exploiting the \texttt{extraChIPs} Bioconductor package.
+	GRAVI standardises multiple steps to perform a \textit{complete standalone analysis}, and also enables easier \textit{integration across multiple complex datasets}.
+	The workflow can be applied to \textit{one or more} ChIP targets under \textit{two or more} conditions.
 	Optional RNA-Seq and HiC data further extend GRAVI to \textbf{directly map dynamic changes in ChIP signal to regulatory targets}.	
 	\end{minipage}
-	\begin{minipage}{0.06\linewidth}
-		\begin{flushright}
-	       	\includegraphics[width=0.9\linewidth]{gravi-qr-code}		
-		\end{flushright}  
+	\begin{minipage}{0.09\linewidth}
+		\innerblock{\large Find GRAVI on GitHub}{
+			\centering
+	       	\includegraphics[width=0.6\linewidth]{gravi-qr-code}		
+		}
 	\end{minipage}
-	\vspace{1cm}
 }
 
 \begin{columns}
-    \column{0.31}
+    \column{0.33}
     	\block{Key Aims}{
-%  	    	\begin{minipage}{0.25\linewidth}
-%	       	\begin{flushleft}
-%       		\includegraphics[width=0.9\linewidth]{gravi-qr-code}
-%       		\vspace{15mm}	       	
-%	       	\end{flushleft}
-%       	\end{minipage}
-%    		\begin{minipage}{0.75\linewidth}
 			\Large
 		    \begin{enumerate}
 		    \item Best Practice Differential ChIP Signal Analysis
@@ -79,13 +76,14 @@
 		    \item Integration of multiple ChIP targets \& treatments
 		    \item Highly flexible input data
 		    \end{enumerate}    		
-%    		\end{minipage}
 
     	}
+    	\vspace{-1cm}
     	\block{Input Data}{
+    		\vspace{-1cm}
     	    \large
     		\begin{minipage}{0.42\linewidth}
-    		\innerblock{Required Input}{
+    		\innerblock{Minimal Input}{
 	    		\begin{itemize}
 	    		\item $1\times$ChIP Target (.bam)
 	    		\begin{itemize}
@@ -109,34 +107,35 @@
     			\end{itemize}   		
     			}
     		\end{minipage}
+    		\vspace{-1cm}
     	}
     	\block{GRAVI Steps}{
-		\Large
-   		\begin{minipage}{0.52\linewidth}
-	    		\innerblock{Always Performed}{
+		\large
+		\useinnerblockstyle{Table}
+		\vspace{-2.5cm}
+    		\innerblock[titlewidthscale=0.4,bodywidthscale=0.6]{Always Performed}{
 	    		\begin{enumerate}
-%			\item Prepare Annotations
-			\item Peak Calling and Sample QC
-			\item Differential Signal Analysis
+	    			\item Annotation Preparation
+				\item Peak Calling and Sample QC
+				\item Differential Signal Analysis
 	    		\end{enumerate}
-	    		}
-    		\end{minipage}
-   		\begin{minipage}{0.47\linewidth}
-	    		\innerblock{Performed Only When Viable}{
-	    		\begin{enumerate}[resume]
-			\item Pairwise Comparisons
-	    		\end{enumerate}
-	    		}
-    		\end{minipage}
+	    	}
+	    \vspace{-2cm}
+    		\innerblock[titlewidthscale=0.4,bodywidthscale=0.6]{$>$1 Comparison Only}{
+			4. Pairwise Comparisons
+    		}
+    		\vspace{-1cm}
+
     		
     	}
 
     	\block{Key Outputs}{
     		\Large
-    		An extensive library of results for sharing with collaborators
+%    		\vspace{-5mm}
+%    		A \textit{comprehensive library of results} 
     		
     		\begin{itemize}
-    			\item Compiled Multi-Page HTML (Figures, Tables, Descriptions)
+    			\item Compiled Multi-Page HTML (Figures, Tables, \texttt{R} Code, etc)
     			\item Bed Files (Peaks, Key Results)
     			\item BigWig Files (Visualisation)
     			\item Spreadsheets (Integrated results with mappings)
@@ -145,150 +144,124 @@
     	}
 
 
-    \column{0.36}
+    \column{0.34}
     \useblockstyle{KeyBlockStyle}
     \block{Motivation}{
     \Large
-    Activation of the Androgen Receptor (AR) has \textit{anti-proliferative properties in many breast cancer models}\cite{Hickey2021}.
-    Integrating the dynamics of AR binding with the Estrogen Receptor $\alpha$ (ER$\alpha$), additional transcription factors, H3K27ac marks and changes in transcription, we are able to investigate the underlying molecular mechanisms.
-    Comparison across cancer models can then be used to identify key targets and mechanisms.
+    \vspace{2mm}
+    Activation of the Androgen Receptor (AR) induces an \textit{anti-proliferative phenotype} in many breast cancer models\autocite{Hickey2021}.
+    Integrating the dynamics of AR binding with the Estrogen Receptor (ER$\alpha$), additional transcription factors, H3K27ac marks and changes in transcription, we were able to investigate the underlying molecular mechanisms.
+    Comparison across multiple cancer models was then used to identify key targets and mechanisms.
+    \vspace{3mm}
     }
     \useblockstyle{UofABlockStyle}
-    
-%   	\block{Annotation Preparation}{
-%    A set of \textit{non-overlapping genomic regions} is defined for the specific annotations utilised, and incorporating all \textbf{transcript-level} information with genomic distances defined by the user.
-%    Regions are defined as 1) Promoter, 2) Upstream Promoter, 3)Exon, 4) Intron, 5) Proximal Intergenic, and 6) Distal Intergenic.
-%    The relationship between defined regions and any provided genomic features (e.g. H3K27ac) data or any long-range interactions (e.g. HiC) is also assessed.
-%    Standardised colour schemes are also defined for propagation through the workflow.
-%    }
-    
-%    \block{Peak Calling}{
-%    	
-%    	Macs2 callpeak\cite{macs2} is used for identifying peaks within individual replicates and across all replicates within a treatment group.
-%    	QC on each sample is performed identifying using common metrics such as FRIP with the relationship between all samples assessed using UpSet Plots and VennDiagrams.
-%    	Consensus peaks are identified with treatment groups and across all samples with all regions exported as \texttt{bed} files.\\[-5mm]
-%    	
-%        \begin{tikzfigure}[Example outputs for ER binding showing all samples as an UpSet plots, common consensus peaks  and the genomic distribution.]
-%        	\includegraphics[width=0.35\linewidth]{all-reps-upset-1}
-%        	\hfill
-%        	\includegraphics[width=0.25\linewidth]{ER_common_peaks}
-%        	\hfill
-%        	\includegraphics[width=0.3\linewidth]{plot-region-overlap-1}
-%        \end{tikzfigure}
-%    	
-%    }
 
     \block{Differential Signal Analysis}{
-    
-	\begin{minipage}{0.45\linewidth}
-		\innerblock{Consistent Steps}{
+    \useinnerblockstyle{Default}
+	\begin{minipage}{0.5\linewidth}
+		\innerblock[titlecenter]{Always Performed}{
 		    \begin{enumerate}
-			    	\item Sliding Windows\cite{csaw} using 
+			    	\item Sliding Windows\autocite{csaw} using either
 			    	\begin{enumerate}
-			    		\item Quasi-Likelihood Models\cite{Lund2012-xo}, or
-			    		\item SQN\cite{sqn} with limma-trend\cite{voom}
+			    		\item Quasi-Likelihood Models\autocite{Lund2012-xo}, or
+			    		\item SQN\autocite{sqn} with limma-trend\autocite{voom}
 			    	\end{enumerate}
-			    	\item Range-Based $H_0$\cite{treat}
-			    	\item Independent Hypothesis Weighting (IHW)\cite{Ignatiadis2016-cq}
-			    	\item Mapped to Genes, Regulatory Regions and External Features
+			    	\item Range-Based $H_0$\autocite{treat}
+			    	\item Independent Hypothesis Weighting\autocite{Ignatiadis2016-cq}
+			    	\item Mapped to Genes, Regulatory \mbox{Regions} and Optional Features
+			    	\item Tables, Figures and Bed files			    	
 			    	\item Enrichment Analysis
-			    	\begin{itemize}
-			    		\item Tables and Network Plots
-			    	\end{itemize}
-			    	\item Multiple tables, figures and bed files
+%			    	\begin{itemize}
+%			    		\item Tables and Network Plots
+%			    	\end{itemize}
 		    \end{enumerate}
 		   }
-		\innerblock{Steps With RNA-Seq}{
-		    \begin{enumerate}
+		\vspace{5mm}
+		\innerblock[titlecenter]{If DGE Results Included}{
+	    		\begin{enumerate}
 			    	\item Direct Targets Identified
 			    	\item \textit{Combined} Enrichment Analysis
-			    	\begin{itemize}
-			    		\item Tables and Network Plots
-			    	\end{itemize}
 		    \end{enumerate}
 		   }
-		\innerblock{To Be Implemented Next}{
+		\vspace{5mm}
+		\innerblock[titlecenter]{Coming Soon}{
 		    \begin{enumerate}
-			    	\item Alternative Fixed-Width Analysis
-			    	\item TMM/RLE Normalisation
+			    	\item Fixed-Width Windows
+			    	\item More Normalisation Options
 			    	\item ATAC-Seq Methods
 		    \end{enumerate}
 		   }
-%	\vspace{5cm}
 	\end{minipage}	    
-	\begin{minipage}{0.55\linewidth}
-	
+	\begin{minipage}{0.5\linewidth}
+		\small
 		\centering
-    		\begin{tikzfigure}[AR logCPM values before and after Smooth Quantile Normalisation. AR is primarily cytoplasmic then shifts to be nuclear under E2+DHT\label{fig:logCPM}]
-        	\includegraphics[width=0.98\linewidth]{ar-logcpm-densities-1}
+    		\begin{tikzfigure}[AR logCPM values A) before and B) after Smooth Quantile Normalisation. AR is translocated from the cytoplasm to the nucleus when activated by DHT\label{fig:logCPM}]
+        	\includegraphics[width=\linewidth]{plot-logcpm-densities-1}
         \end{tikzfigure}		
         
-           \begin{tikzfigure}[Partitioned p-values for H3K27ac signal based on co-detection of AR and ER.\label{fig:ihw}]
-	        	\includegraphics[width=0.98\linewidth]{h3k27ac-ihw-pvals-1}
+           \begin{tikzfigure}[Partitioned $p$-values for H3K27ac Differential Signal Analysis based on co-detection of AR and ER. Here, 21\% more windows were considered significant\label{fig:ihw}]
+	        	\includegraphics[width=\linewidth]{plot-ihw-pvals-1}
     	    \end{tikzfigure}	
         
 	\end{minipage}    	
 
-%  		\begin{minipage}{0.5\linewidth}
-%  			\centering
-%           \begin{tikzfigure}[Partitioned p-values for the GATA3 binding response to DHT based on co-detection of the additional ChIP targets AR and ER.\label{fig:ihw}]
-%	        	\includegraphics[width=0.8\linewidth]{plot-ihw-pvals-1}
-%    	    \end{tikzfigure}	
-%    	\end{minipage}
-    	
-
     	
     }
 
-    \column{0.32}
+    \column{0.33}
     \block{Pairwise Comparisons}{
-		\begin{wrapfigure}{r}{0.16\linewidth}
+		\small
+		\begin{minipage}{0.51\linewidth}
 			\centering
-			\includegraphics[width=0.9\linewidth]{extraChIPs_sticker}
-		\end{wrapfigure}    
-		Given prior rigour in statistical testing, comparison across pairs of factors becomes more of a \textit{site classification problem}.
-		When a site is found to be responsive for one transcription factor a lower p-value threshold is applied to the second factor in any overlapping sites, ensuring \textbf{unchanged sites are classified more accurately} as these are important in a pairwise analysis.
-		Each site is classified across both ChIP targets as \textit{Up, Down, Unchanged or Undetected} yielding a set of pairwise classifications.
-		Comparisons of changed binding (Figure \ref{fig:pairwise-logfc}) are generated across all sites, and separated by annotated region or external feature.
-		Profile heatmaps are also created (Figure \ref{fig:heatmap-ar-er}) and enrichment testing is performed on each set of regions.
-		Example sites for each set of regions are also plotted by default using \texttt{extraChIPs::plotHFGC()} (Figure \ref{fig:zbtb16}).
-		If RNA-Seq data is provided, an analysis of DE genes by pairwise changes in ChIP target binding is also performed (Figure \ref{fig:volcano}).\\
-		
-		
-		\begin{minipage}{0.5\linewidth}
-			\centering
-           \begin{tikzfigure}[Pairwise logFC values for AR and ER broken down by externally provided H3K27ac-defined features.\label{fig:pairwise-logfc}]
-	        	\includegraphics[width=0.9\linewidth]{plot-dbwin-by-feature-1}
-    	    \end{tikzfigure}		
-		\end{minipage}
-  		\begin{minipage}{0.5\linewidth}
-  			\centering
-	    	\begin{tikzfigure}[Profile heatmap for sites showing increased binding for both AR and ER.\label{fig:heatmap-ar-er}]
-	        	\includegraphics[width=0.7\linewidth]{AR_Up_ER_Up_profile_heatmap}
-	        \end{tikzfigure}
-    	\end{minipage}\\[8mm]
-    	
-		\begin{minipage}{0.5\linewidth}
-			\centering
-           \begin{tikzfigure}[\textit{ZBTB16} is up-regulated, shows increased binding for both AR and ER, with an increase in H3K27ac signal\label{fig:zbtb16}]
-	        	\includegraphics[width=0.8\linewidth]{AR_Up_ER_Up_AveExpr}
-    	    \end{tikzfigure}		
-		\end{minipage}
-  		\begin{minipage}{0.5\linewidth}
-  			\centering
-           \begin{tikzfigure}[DE Genes by AR and ER binding patterns. Here, the top row would be the most informative.\label{fig:volcano}]
-	        	\includegraphics[width=0.82\linewidth]{plot-volcano-1}
-    	    \end{tikzfigure}	
-    	\end{minipage}\\[5mm]
+			\begin{tikzfigure}[Pairwise DSA results for ER and H3K27ac]
+	        	\includegraphics[width=0.9\linewidth]{plot-dbwin-1-crop}
+    	    		\end{tikzfigure}			
+	        
+	        	\begin{tikzfigure}[DE Genes by combined AR and H3K27ac signal.\label{fig:volcano}]
+			\includegraphics[width=0.9\linewidth]{plot-volcano-1-crop}
+			\end{tikzfigure}	
 
+    		\end{minipage}
+		\begin{minipage}{0.49\linewidth}
+			\centering
+	    		\begin{tikzfigure}[Profile heatmap for sites showing increased signal for both AR and H3K27ac.]
+	        	\includegraphics[width=\linewidth]{AR_Up_H3K27ac_Up_profile_heatmap-crop}
+	        \end{tikzfigure}
+    	    		
+			\begin{tikzfigure}[Enrichment network for DGE results combined with sites showing a joint increase in AR and H3K27ac]
+			\includegraphics[width=\linewidth]{AR_Up-H3K27ac_Up_rnaseq_network-crop}
+			\end{tikzfigure}					
+
+    		\end{minipage}
+    		\vspace{1cm}
+    	\begin{minipage}{\linewidth}
+    	\vspace{8mm}
+    	\centering
+    	\normalsize
+    	All examples taken from an analysis of AR, ER and H3K27ac in ZR-75 cells treated with DHT
+    	\end{minipage}
+
+    \coloredbox{
+	    \colorlet{innerblockbodybgcolor}{white}
+		\begin{minipage}{0.79\linewidth}
+	        \innerblock{\large \textbf{References}}{
+		        \printbibliography[heading=none]
+			}
+		\end{minipage}
+		\begin{minipage}{0.2\linewidth}
+		    \innerblock[titlecenter]{\large See A Complete Report Here}{
+		    \centering
+		    \includegraphics[width=0.85\linewidth]{gravi-example-qr-code.png} 
+%		    \small
+%		   	AR, ER \& H3K27ac\\[3mm]
+%		    ZR-75-1 Cells\\[3mm]
+%		    E2DHT vs E2\vspace{1cm}
+	        }
+		\end{minipage}
+	 }
+	    
     }
-    
-    
-    \block{References}{
-        \vspace{-1em}
-        \begin{footnotesize}
-        \printbibliography[heading=none]
-        \end{footnotesize}
-    }
+
+
 \end{columns}
 \end{document}
